/**
 * Jogo do Galo
 * author: matilde pato
 * date: 18-04-2018
 * lecture: POO
 *
 * View
 * */
package aula07.jogogalov1.view;

public class Space extends CellTile {
    @Override
    public void paint() {
    }
}
